ods-2 and ods-7 both full added

--- a/templates/ods/ods-02/ods-02-legislativa.html
+++ b/templates/ods/ods-02/ods-02-legislativa.html
@@ -80,17 +80,18 @@
                     </summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
-                        Incluir informe económico en la evaluación de la estrategia 2030 de Navarra.0/1
+                        Impulso de la elaboración de una nueva cartera a través de un proceso participativo con 
+                        las entindades sociales. La nueva cartera incluirá indicadores de impacto de los servicios en población de bajos ingresos.0/1/2
                       </p>
                       <p><strong class="underline">Fuentes de origen</strong>: 
-                        <a href="http://presupuesto.navarra.es/es/" class="text-white underline">
-                            http://presupuesto.navarra.es/es/
+                        <a href="https://bon.navarra.es/es/anuncio/-/texto/2019/75/0/" class="text-white underline">
+                          https://bon.navarra.es/es/anuncio/-/texto/2019/75/0/
                         </a>    
                     </p>
                       <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
+                      <p><strong class="underline">Acciones de desarrollar</strong>: Proposición de ley.</p>
                       <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                      <p><strong class="underline">Meta 2030</strong>: 1</p>
+                      <p><strong class="underline">Meta 2030</strong>: 2</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
                 </details>
@@ -100,8 +101,7 @@
               <details>
                 <summary>
                     <strong>
-                        El Parlamento estará vigilante en la aprobación de los Presupuestos Generales de Navarra 
-                        de la dotación presupuestaria suficiente y estable para el cumplimiento de la normativa, planes, recursos, estudios, índices, etc. 
+                      El parlamento de Navarra establecerá medidas para activar la producción agroecológica local. 
                     </strong>
                 </summary>
                 <hr style="background: #FFFFFF; height: 9px;">
@@ -110,23 +110,46 @@
                   <hr style="background: #FFFFFF; height: 6px;">
                   <!-- Indicador 1 -->
                   <details>
-                    <summary><strong>Informe económico.</strong></summary>
+                    <summary><strong>Superficie producción ecológica.</strong></summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
-                        Incluir informe económico en la evaluación del Plan de Inclusión y 
-                        establecer un % del PIB destinado a acciones contra la pobreza y la exclusión.0/1
-                      </p>
+                        % superficie agraria útil destinada a producción ecológica. 
+
+                        2.31. Porcentaje de superficie dedicada a agricultura orgánica.
+
+                        Definición: Porcentaje de la Superficie Agraria Útil (SAU) dedicada a agricultura ecológica. La SAU comprende las tierras labradas y los pastos permanentes, tanto en secano como en regadío.
+                        Unidad: Porcentaje de hectáreas.
+
+                      </p>  
                       <p><strong class="underline">Fuentes de origen</strong>: 
-                        <a class="text-white underline" href="http://presupuesto.navarra.es/es/">
-                            http://presupuesto.navarra.es/es/
+                        <a class="text-white underline" href="https://ods-agenda2030.navarra.es/pages/objetivo2-comparativa">
+                          https://ods-agenda2030.navarra.es/pages/objetivo2-comparativa
                         </a>
                       </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                      <p><strong class="underline">Meta 2030</strong>: 1</p>
+                      <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
+                      <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
+                      <p><Strong class="underline">Línea de base</Strong>: 10,9 %</p>
+                      <p><strong class="underline">Meta 2030</strong>: 25 %</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
+                    <hr style="background: #FFFFFF; height: 6px;">
+                    <!-- Indicador 2 -->
+                    <details>
+                      <summary><strong>Comercialización agraria directa o en proximidad.</strong></summary>
+                      <hr style="background: #FFFFFF; height: 3px;">
+                        <p><strong class="underline">Descripción</strong>: 
+                          Número de operadores que comercializan en proximidad inscritos en el futuro registro previsto en la Ley 5/2023 de CCC.
+  
+                        </p>  
+                        <p><strong class="underline">Fuentes de origen</strong>: Registro de productos comercializados directamente o en proximidad al amparo de la Ley de Canales Cortos de comercialización.
+                          El registro es de nueva creación. Tomar de referencia el dato de su primer año de creación.
+                        </p>
+                        <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
+                        <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
+                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                        <p><strong class="underline">Meta 2030</strong>: 2</p>
+                        <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
+                      </details>
                 </details>
               </details>
             </details>
