--- a/templates/ods/ods-07/ods-07-legislativa.html
+++ b/templates/ods/ods-07/ods-07-legislativa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ODS 2 Control</title>
+    <title>ODS 7 Legislativa</title>
     <link rel="icon" type="image/png" href="../../../../../static/img/logo_ods_1.png"/>
 
     <!-- Bootstrap CDN -->
@@ -34,13 +34,13 @@
       <br>
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="ods-title">ODS 2 - Control</h1>
-          <h1 class="ods-title">Hambre cero</h1>                      
+          <h1 class="ods-title">ODS 7 - Legislativa</h1>
+          <h1 class="ods-title">Energía asequible y no contaminante</h1>                      
           <br>
-          <p class="lead text-white">Poner fin al hambre</p>
+          <p class="lead text-white"> Garantizar el acceso a una energía asequible, segura, sostenible y moderna</p>
           <p>
             <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
-            <a href="ods-02-legislativa.html" class="btn btn-primary my-2">Legislativa</a>
+            <a href="ods-07-control.html" class="btn btn-primary my-2">Control</a>
             <a href="https://www.un.org/sustainabledevelopment/es/hunger/" target="_blank" class="btn btn-primary my-2">Más info</a>
           </p>
         </div>
@@ -65,8 +65,7 @@
               <details>
                 <summary>
                     <strong>
-                        Anualmente el parlamento solicitará información al 
-                        Gobierno de Navarra sobre las normas, los Planes y Estrategias vinculados. 
+                        El Parlamento impulsará una estrategia de lucha contra la pobreza energética basada en bonos, exenciones. 
                     </strong>
                 </summary>
                 <hr style="background: #FFFFFF; height: 9px;">
@@ -75,17 +74,21 @@
                   <hr style="background: #FFFFFF; height: 6px;">
                   <!-- Indicador 1 -->
                   <details>
-                    <summary><strong>Información gubernamental sobre HAMBRE.
-                        Situación Normas, Planes y Estrategias.</strong>
+                    <summary><strong>Bono social energético.</strong>
                     </summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
-                        El Gobierno informa sobre las normas, planes y estrategias vinculadas para Erradicar el Hambre en Navarra.0/1/2
+                        Beneficiarios del bono social energético según el grado de vulnerabilidad (los consumidores vulnerables; los vulnerables severos y Consumidores en riesgo de exclusión social).
+                        Mesa de trabajo con expertas en servicios sociales y en energía.
+                        0/1/2
                       </p>
-                      <p><strong class="underline">Fuentes de origen</strong>: Gobierno de Navarra.  
+                      <p><strong class="underline">Fuentes de origen</strong>: 
+                        <a href="https://www.cnmc.es/" class="text-white underline">
+                            https://www.cnmc.es/
+                        </a>    
                     </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Interpelación.</p>
+                      <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
+                      <p><strong class="underline">Acciones de desarrollar</strong>: Proposición de ley.</p>
                       <p><Strong class="underline">Línea de base</Strong>: 0</p>
                       <p><strong class="underline">Meta 2030</strong>: 2</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
@@ -97,8 +100,13 @@
               <details>
                 <summary>
                     <strong>
-                        El Parlamento de Navarra solicitará al Gobierno de Navarra un informe relativo a sus relaciones comerciales en el ámbito agropecuario 
-                        para garantizar que no vayan en contra del desarrollo sostenible y soberanía alimentaria de las comunidades de otros países. 
+                        El Parlamento favorecerá la generación a la mayor celeridad posible de un modelo 
+                        energético, basado en fuentes de creación pequeñas, cercanas y no invasivas, 
+                        promoviendo la generación y comercialización pública de energías renovables desde 
+                        cooperativas de iniciativa social como herramientas de transición a un modelo que 
+                        asuma el decrecimiento, la soberanía 
+                        energética popular y la vida sostenible. Para ello velará por la supresión progresiva 
+                        de la explotación de los combustibles fósiles y la energía nuclear. 
                     </strong>
                 </summary>
                 <hr style="background: #FFFFFF; height: 9px;">
@@ -107,49 +115,21 @@
                   <hr style="background: #FFFFFF; height: 6px;">
                   <!-- Indicador 1 -->
                   <details>
-                    <summary><strong>Comercio agropecuario internacional.</strong></summary>
+                    <summary><strong>Pequeñas instalaciones no invasivas.</strong></summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
-                        El Gobierno informa sobre exportaciones a países del sur de productos agropecuarios y alimentos 0/1/2
+                        Energía generada por las instalaciones de autoconsumos individuales. (kWh/año). 
+
+                        Energía generada por las instalaciones de autoconsumo colectivas (kWh/año).
+
+                        0/1/2
+
                       </p>  
-                      <p><strong class="underline">Fuentes de origen</strong>: Gobierno de Navarra.
+                      <p><strong class="underline">Fuentes de origen</strong>: Registro de 
+                        autoconsumo de energía eléctrica de Navarra (RAN) y el registro de baja tensión de las 
+                        instalaciones eléctricas de BT.
                       </p>
                       <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                      <p><strong class="underline">Meta 2030</strong>: 2</p>
-                      <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
-                    </details>
-                </details>
-              </details>
-              <hr style="background: #FFFFFF; height: 12px;">
-              <!-- Pacto 3 -->
-              <details>
-                <summary>
-                    <strong>
-                        El parlamento promoverá la implantación de cláusulas sociales y de reserva de mercado para fomentar una alimentación saludable y 
-                        sostenible (Km 0) en todos los servicios públicos: escuelas, hospitales, residencias, aulas de 0-3 años, atención a personas dependientes, etc.  
-                    </strong>
-                </summary>
-                <hr style="background: #FFFFFF; height: 9px;">
-                <details>
-                  <summary><strong class="text-white">INDICADORES</strong></summary>
-                  <hr style="background: #FFFFFF; height: 6px;">
-                  <!-- Indicador 1 -->
-                  <details>
-                    <summary><strong>Información social y ambiental tranparente.</strong>
-                    </summary>
-                    <hr style="background: #FFFFFF; height: 3px;">
-                      <p><strong class="underline">Descripción</strong>: 
-                        Acceso a la información de compra pública disgregada por criterios sociales y ambientales.Inclusión de cláusulas.Contratos en reserva.
-                        0/1/2
-                      </p>
-                      <p><strong class="underline">Fuentes de origen</strong>: 
-                        <a href="https://portalcontratacion.navarra.es/es/transparencia/analisis-del-gasto-de-la-contratacion-publica" class="text-white underline">
-                            https://portalcontratacion.navarra.es/es/transparencia/analisis-del-gasto-de-la-contratacion-publica
-                        </a>    
-                    </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Bianual.</p>
                       <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
                       <p><Strong class="underline">Línea de base</Strong>: 0</p>
                       <p><strong class="underline">Meta 2030</strong>: 2</p>
@@ -158,15 +138,15 @@
                     <hr style="background: #FFFFFF; height: 6px;">
                     <!-- Indicador 2 -->
                     <details>
-                      <summary><strong>Licitaciones de restauración en reserva para empresas de economía social.</strong>
-                      </summary>
+                      <summary><strong>Dependencia energética.</strong></summary>
                       <hr style="background: #FFFFFF; height: 3px;">
                         <p><strong class="underline">Descripción</strong>: 
-                            Gasto anual en contratos de servicios de alimentación y comedores colectivos (escolares, residencias, hospitales) en reserva para empresas de economía social.
+                            Porcentaje de las importaciones en el consumo total de energía.
+
                             0/1/2
+                        </p>  
+                        <p><strong class="underline">Fuentes de origen</strong>: Indicadores /ODS 2030 en Navarra.
                         </p>
-                        <p><strong class="underline">Fuentes de origen</strong>: Portal de contratación pública. Gasto en contratos con reserva.  
-                      </p>
                         <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                         <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
                         <p><Strong class="underline">Línea de base</Strong>: 0</p>
@@ -176,16 +156,19 @@
                       <hr style="background: #FFFFFF; height: 6px;">
                       <!-- Indicador 3 -->
                       <details>
-                        <summary><strong>Licitaciones de restauración con cláusulas sociales.</strong>
-                        </summary>
+                        <summary><strong>Comunidades de energía renovable.</strong></summary>
                         <hr style="background: #FFFFFF; height: 3px;">
                           <p><strong class="underline">Descripción</strong>: 
-                            Gasto anual en contratos de servicios de alimentación y comedores 
-                            colectivos (escolares, residencias, hospitales) que contengan clausulas sociales.
+                            Número de comunidades de energía renovable en Navarra.
+
+                            0/1/2
+                          </p>  
+                          <p><strong class="underline">Fuentes de origen</strong>: 
+                            <a href="https://transicion-energetica.navarra.es/" class="text-white underline">
+                                https://transicion-energetica.navarra.es/
+                            </a>
                           </p>
-                          <p><strong class="underline">Fuentes de origen</strong>: Portal de contratación pública. Cláusulas sociales.  
-                        </p>
-                          <p><Strong class="underline">Periodicidad</Strong>: Anual</p>
+                          <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                           <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
                           <p><Strong class="underline">Línea de base</Strong>: 0</p>
                           <p><strong class="underline">Meta 2030</strong>: 2</p>
@@ -194,44 +177,35 @@
                         <hr style="background: #FFFFFF; height: 6px;">
                         <!-- Indicador 4 -->
                         <details>
-                          <summary><strong>Comida pública saludable y sostenible.</strong>
-                          </summary>
+                          <summary><strong>Consumo de energía primaria en Navarra procedente de combustibles fósiles (% del total).</strong></summary>
                           <hr style="background: #FFFFFF; height: 3px;">
                             <p><strong class="underline">Descripción</strong>: 
-                                Menús anuales en servicios públicos que cumplen: 
-                                A) +20 % materias primas locales (Cultivado o criado a <150 km).
-                                B) + 20 % productos frescos (Primera Gama, no conserva, congelado o procesado).
-                                C) + 20% ecológicos. 
-                                
-                                Seguimiento del Plan de Producción Ecológica pendiente de aprobación.
-                                 
-                                Promover una normativa para garantizar unos mínimos significativos de productos ecológicos, locales y frescos? ¿Ver la nueva normativa? 
+                                El combustible fósil comprende los productos de (Carbón y coques: hulla, antracita, 
+                                coque metalúrgico y coque de petróleo; Derivados del petróleo (fuel-oil, gasóleos (A, B y C), gasolinas, querosenos y GLP (a granel y envasado)) 
+                                y Gas natural.0/1/2
+                            </p>  
+                            <p><strong class="underline">Fuentes de origen</strong>: Balance Energético de Navarra.
                             </p>
-                            <p><strong class="underline">Fuentes de origen</strong>: 
-                              <a href="https://www.navarraecologica.org/files/2022/08/esquema-plan-estrategico-produccion-ecologica-2021-2030-j0rnada-27-06-2022.pdf" class="text-white underline">
-                                https://www.navarraecologica.org/files/2022/08/esquema-plan-estrategico-produccion-ecologica-2021-2030-j0rnada-27-06-2022.pdf
-                              </a>    
-                          </p>
-                            <p><Strong class="underline">Periodicidad</Strong>: Anual</p>
+                            <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                             <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                            <p><Strong class="underline">Línea de base</Strong>: Situación en 2018.</p>
-                            <p><strong class="underline">Meta 2030</strong>: Todos los menús
-                                públicos cumplan norma del 20, 20, 20. A) +20 % materias primas locales (Cultivado o criado a <150 km).
-                                B) + 20 % productos frescos (Primera Gama, no conserva, congelado o procesado).
-                                C) + 20% ecológicos. 
-                            </p>
-                            <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
+                            <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                            <p><strong class="underline">Meta 2030</strong>: 2</p>
+                            <p><strong class="underline">Organismo responsable</strong>: Gobierno de Navarra.</p>
                           </details>
                 </details>
               </details>
               <hr style="background: #FFFFFF; height: 12px;">
-              <!-- Pacto 4 -->
+              <!-- Pacto 3 -->
               <details>
                 <summary>
                     <strong>
-                        El Parlamento promoverá específicamente líneas de emprendimiento en el 
-                        ámbito de la agroecología y/o agronomía para la recuperación de los 
-                        entornos rurales, la mejora de alimentación y la apuesta por el sector primario. 
+                      El Parlamento se compromete a eliminar los subsidios a los combustibles fósiles 
+                      y las industrias nucleares; poner fin a los subsidios a las corporaciones 
+                      transnacionales emisoras de carbono, adoptando y aplicando el principio de 
+                      “quien contamina paga” a través de medidas y objetivos cuantificables. Así mismo, 
+                      promoverá fuentes de energía limpias de GEI incluyendo la difusión de las energías solar 
+                      y eólica y de la energía hidroeléctrica a pequeña escala, suprimiendo progresivamente 
+                      la explotación de combustibles fósiles y la energía nuclear.
                     </strong>
                 </summary>
                 <hr style="background: #FFFFFF; height: 9px;">
@@ -240,21 +214,18 @@
                   <hr style="background: #FFFFFF; height: 6px;">
                   <!-- Indicador 1 -->
                   <details>
-                    <summary><strong>Número de operadores en sector ecológico.</strong>
+                    <summary><strong>Marco legislativo</strong>
                     </summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
-                        Número de operadores en sector ecológico.
+                        Establecer un marco normativo para eliminar los subsidios a los combustibles fósiles.0/1/2
                       </p>
-                      <p><strong class="underline">Fuentes de origen</strong>: 
-                        <a href="https://www.cpaen.org/es/cpaen-nnpek/estadisticas" class="text-white underline">
-                            https://www.cpaen.org/es/cpaen-nnpek/estadisticas
-                        </a>    
+                      <p><strong class="underline">Fuentes de origen</strong>: Gobierno de Navarra.
                     </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 667</p>
-                      <p><strong class="underline">Meta 2030</strong>: 1000</p>
+                      <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
+                      <p><strong class="underline">Acciones de desarrollar</strong>: Proposición de ley.</p>
+                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                      <p><strong class="underline">Meta 2030</strong>: 2</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
                 </details>
