Last fixes with missing charts

--- a/templates/ods/ods-07/ods-07-control.html
+++ b/templates/ods/ods-07/ods-07-control.html
@@ -177,9 +177,7 @@
                           <summary><strong>Gases de efecto invernadero (GEI).</strong></summary>
                           <hr style="background: #FFFFFF; height: 3px;">
                             <p><strong class="underline">Descripción</strong>: 
-                              Emisiones directas junto con emisiones derivadas de la generación y consumo de energía eléctrica.
-
-                              Millones de Toneladas CO2-eq.
+                              % reducción de emisiones totales de GEI sobre niveles de 2005.
                             </p>  
                             <p><strong class="underline">Fuentes de origen</strong>: 
                               <a href="https://www.navarra.es/es/medio-ambiente/inventario-de-gases-de-efecto-invernadero" class="text-white underline">
@@ -188,8 +186,8 @@
                             </p>
                             <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                             <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                            <p><Strong class="underline">Línea de base</Strong>: 5,5</p>
-                            <p><strong class="underline">Meta 2030</strong>: 0</p>
+                            <p><Strong class="underline">Línea de base</Strong>: 14,74 %</p>
+                            <p><strong class="underline">Meta 2030</strong>: 45 %</p>
                             <p><strong class="underline">Organismo responsable</strong>: Gobierno de Navarra.</p>
                           </details>
                 </details>
@@ -270,11 +268,11 @@
                     </summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
-                        Estudio sobre el mercado de la eficiencia energética en Navarra.0/1/2
+                        Número de auditorías energéticas realizadas. 0/1/2
                       </p>
                       <p><strong class="underline">Fuentes de origen</strong>: Realización del estudio.
                     </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
+                      <p><Strong class="underline">Periodicidad</Strong>: Trianual.</p>
                       <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
                       <p><Strong class="underline">Línea de base</Strong>: 0</p>
                       <p><strong class="underline">Meta 2030</strong>: 2</p>
@@ -304,7 +302,7 @@
                       </p>
                       <p><strong class="underline">Fuentes de origen</strong>: Gobierno de Navarra.
                     </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Trianual.</p>
+                      <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
                       <p><strong class="underline">Acciones de desarrollar</strong>: Proposición de ley.</p>
                       <p><Strong class="underline">Línea de base</Strong>: 1</p>
                       <p><strong class="underline">Meta 2030</strong>: 2</p>
@@ -349,7 +347,7 @@
           <!-- End of accordion -->
         </div>      
         <div class="col">
-            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
+            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/graficos/ods_07.png">
         </div>
     </div>
 </div>
