--- a/templates/ods/ods-07/ods-07-legislativa.html
+++ b/templates/ods/ods-07/ods-07-legislativa.html
@@ -174,9 +174,9 @@
                           <p><strong class="underline">Meta 2030</strong>: 2</p>
                           <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                         </details>
-                        <hr style="background: #FFFFFF; height: 6px;">
+                        <!-- <hr style="background: #FFFFFF; height: 6px;"> -->
                         <!-- Indicador 4 -->
-                        <details>
+                        <!-- <details>
                           <summary><strong>Consumo de energía primaria en Navarra procedente de combustibles fósiles (% del total).</strong></summary>
                           <hr style="background: #FFFFFF; height: 3px;">
                             <p><strong class="underline">Descripción</strong>: 
@@ -191,7 +191,7 @@
                             <p><Strong class="underline">Línea de base</Strong>: 0</p>
                             <p><strong class="underline">Meta 2030</strong>: 2</p>
                             <p><strong class="underline">Organismo responsable</strong>: Gobierno de Navarra.</p>
-                          </details>
+                          </details> -->
                 </details>
               </details>
               <hr style="background: #FFFFFF; height: 12px;">
@@ -235,7 +235,7 @@
           <!-- End of accordion -->
         </div>      
         <div class="col">
-            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
+            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/graficos/ods_07.png">
         </div>
     </div>
 </div>
