--- a/templates/ods/ods-09/ods-09-legislativa.html
+++ b/templates/ods/ods-09/ods-09-legislativa.html
@@ -131,10 +131,23 @@
                     <hr style="background: #FFFFFF; height: 6px;">
                     <!-- Indicador 2 -->
                     <details>
-                      <summary><strong>Nivel de formación de la población.</strong></summary>
+                      <summary><strong>Multidimensional  de Calidad de vida</strong></summary>
                       <hr style="background: #FFFFFF; height: 3px;">
                         <p><strong class="underline">Descripción</strong>: 
-                            Población de 16 y más años con nivel de educación superior.0/1/2
+                            El IMCV es un indicador que se presenta con carácter esperimental por parte del INE,
+                            ofrece una visión panorámica (multidimensional) de la calidad de vida en 9 dimensiones:
+                            <ol class="text-white">
+                              <li>Condiciones materiales de vida.</li>
+                              <li>Trabajo</li>
+                              <li>Salud</li>
+                              <li>Educación</li>
+                              <li>Ocio y relaciones sociales</li>
+                              <li>Seguridad física y personal</li>
+                              <li>Gobernanza y derechos básicos</li>
+                              <li>Entorno y medio ambiente</li>
+                              <li>Experiencia general de la vida</li>
+                              0/1/2
+                            </ol>
                         </p>  
                         <p><strong class="underline">Fuentes de origen</strong>: INE
                         </p>
@@ -171,7 +184,7 @@
           <!-- End of accordion -->
         </div>      
         <div class="col">
-            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
+            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/graficos/ods_09.png">
         </div>
     </div>
 </div>
