--- a/templates/ods/ods-12/ods-12-legislativa.html
+++ b/templates/ods/ods-12/ods-12-legislativa.html
@@ -96,8 +96,8 @@
                     </p>
                       <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                       <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o solicitud de información.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                      <p><strong class="underline">Meta 2030</strong>: 2</p>
+                      <p><Strong class="underline">Línea de base</Strong>: 2</p>
+                      <p><strong class="underline">Meta 2030</strong>: 6 %</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
                     <hr style="background: #FFFFFF; height: 6px;">
@@ -127,7 +127,7 @@
           <!-- End of accordion -->
         </div>      
         <div class="col">
-            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
+            <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/graficos/ods_12.png">
         </div>
     </div>
 </div>
