--- a/templates/ods/ods-06/ods-06-control.html
+++ b/templates/ods/ods-06/ods-06-control.html
@@ -93,7 +93,7 @@
                         </p>
                           <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                           <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                          <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                          <p><Strong class="underline">Línea de base</Strong>: 515,438 € (en 2020)</p>
                           <p><strong class="underline">Meta 2030</strong>: 2</p>
                           <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                         </details>
@@ -128,7 +128,7 @@
                       </p>
                         <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                         <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                        <p><Strong class="underline">Línea de base</Strong>: 376,850 € (en 2020)</p>
                         <p><strong class="underline">Meta 2030</strong>: 2</p>
                         <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                       </details>
@@ -173,7 +173,7 @@
               <!-- End of accordion -->
             </div>      
             <div class="col">
-                <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
+                <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/graficos/ods_06.png">
             </div>
         </div>
     </div>
