--- a/templates/ods/ods-14/ods-14-control.html
+++ b/templates/ods/ods-14/ods-14-control.html
@@ -147,7 +147,7 @@
                     </p>
                       <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                       <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o solicitud de información.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                      <p><Strong class="underline">Línea de base</Strong>: 515,438 € (en 2020)</p>
                       <p><strong class="underline">Meta 2030</strong>: 2</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
