--- a/templates/ods/ods-07/ods-07-legislativa.html
+++ b/templates/ods/ods-07/ods-07-legislativa.html
@@ -149,8 +149,8 @@
                         </p>
                         <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
                         <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                        <p><strong class="underline">Meta 2030</strong>: 2</p>
+                        <p><Strong class="underline">Línea de base</Strong>: 77 %</p>
+                        <p><strong class="underline">Meta 2030</strong>: 61 %</p>
                         <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                       </details>
                       <hr style="background: #FFFFFF; height: 6px;">
