--- a/templates/ods/ods-12/ods-12-control.html
+++ b/templates/ods/ods-12/ods-12-control.html
@@ -388,6 +388,43 @@
                     </details>
                 </details>
               </details>
+              <hr style="background: #FFFFFF; height: 12px;">
+              <!-- Pacto 8 -->
+              <details>
+                <summary>
+                    <strong>
+                        El Parlamento promoverá e impulsará programas de sensibilización y concienciación sobre nuestros hábitos en torno 
+                        a los residuos, sobre todo los que se generan en la vía pública, aplicando campañas como ya se realizan en otros territorios sobre la importancia de no tirar colillas y 
+                        otros residuos plásticos altamente contaminantes; los cuales, tras pasar por nuestros ríos, terminan irremediablemente en el mar.
+                    </strong>
+                </summary>
+                <hr style="background: #FFFFFF; height: 9px;">
+                <details>
+                  <summary><strong class="text-white">INDICADORES</strong></summary>
+                  <hr style="background: #FFFFFF; height: 6px;">
+                  <!-- Indicador 1 -->
+                  <details>
+                    <summary><strong>Cumplimiento del  Plan de Residuos de Navarra.</strong>
+                    </summary>
+                    <hr style="background: #FFFFFF; height: 3px;">
+                      <p><strong class="underline">Descripción</strong>: 
+                        % de residuos preparados para la reutilización o reciclado.
+                      </p>
+                      <p><strong class="underline">Fuentes de origen</strong>: 
+                        <a href="http://www.navarra.es/home_es/Temas/Medio+Ambiente/Observatorio+Ambiental+de+Navarra.htm"
+                        class="text-white underline">
+                        http://www.navarra.es/home_es/Temas/Medio+Ambiente/Observatorio+Ambiental+de+Navarra.htm
+                        </a>
+                    </p>
+                      <p><Strong class="underline">Periodicidad</Strong>: Trianual.</p>
+                      <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o solicitud de información.</p>
+                      <p><Strong class="underline">Línea de base</Strong>: 45 %</p>
+                      <p><strong class="underline">Meta 2030</strong>: 65 %</p>
+                      <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
+                    </details>
+                    <hr style="background: #FFFFFF; height: 6px;">
+                </details>
+              </details>
             </details>
           </div>
           <!-- End of accordion -->
