--- a/templates/ods/ods-17/ods-17-control.html
+++ b/templates/ods/ods-17/ods-17-control.html
@@ -21,11 +21,12 @@
 
          <!-- Navigation menu bar -->
          <nav class="navbar">
-          <a href="../.../../../../index.html" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <a href="../.../../../../index.html" class="text-left p-2 nav-menu hover-underline-animation"><i class="fa-solid fa-house"></i> HOME</a>
           <div class="nav-menu">
-              <a href="../../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
-              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
-              <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+              <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation"><i class="fa-solid fa-screwdriver-wrench"></i> Herramienta</a>
+              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation"><i class="fa-solid fa-people-group"></i> Grupo de trabajo</a>
+              <a href="https://parlamentodenavarra.es/sites/default/files/noticias-archivos-adjuntos/22-2-21Pacto%20Navarro%20contra%20la%20Pobreza%20y%20la%20desigualdad.pdf" 
+              class="text-right p-2 hover-underline-animation" target="_blank"><i class="fa-regular fa-handshake"></i> Pacto</a>
           </div>
       </nav>
         <!-- end of navigation menu bar -->
@@ -213,6 +214,7 @@
             crossorigin="anonymous"></script>
     <!-- Accordion JS -->
     <script src="../../../static/js/accordion.js"></script>
+    <script src="https://kit.fontawesome.com/961d7b02e1.js" crossorigin="anonymous"></script>
     <!--  -->
 </body>
 </html>
