--- a/templates/ods/ods-12/ods-12-control.html
+++ b/templates/ods/ods-12/ods-12-control.html
@@ -21,11 +21,12 @@
 
          <!-- Navigation menu bar -->
          <nav class="navbar">
-          <a href="../.../../../../index.html" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <a href="../.../../../../index.html" class="text-left p-2 nav-menu hover-underline-animation"><i class="fa-solid fa-house"></i> HOME</a>
           <div class="nav-menu">
-              <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
-              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
-              <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+              <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation"><i class="fa-solid fa-screwdriver-wrench"></i> Herramienta</a>
+              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation"><i class="fa-solid fa-people-group"></i> Grupo de trabajo</a>
+              <a href="https://parlamentodenavarra.es/sites/default/files/noticias-archivos-adjuntos/22-2-21Pacto%20Navarro%20contra%20la%20Pobreza%20y%20la%20desigualdad.pdf" 
+              class="text-right p-2 hover-underline-animation" target="_blank"><i class="fa-regular fa-handshake"></i> Pacto</a>
           </div>
       </nav>
         <!-- end of navigation menu bar -->
@@ -40,7 +41,7 @@
           <p class="lead text-white">Garantizar modalidades de consumo y producción sostenibles</p>
           <p>
             <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
-            <a href="ods-12-control.html" class="btn btn-primary my-2">Control</a>
+            <a href="ods-12-economica.html" class="btn btn-primary my-2">Económica</a>
             <a href="ods-12-legislativa.html" class="btn btn-primary my-2">Legislativa</a>
             <a href="https://www.un.org/sustainabledevelopment/es/cities/" target="_blank" class="btn btn-primary my-2">Más info</a>
           </p>
@@ -446,6 +447,7 @@
             crossorigin="anonymous"></script>
     <!-- Accordion JS -->
     <script src="../../../static/js/accordion.js"></script>
+    <script src="https://kit.fontawesome.com/961d7b02e1.js" crossorigin="anonymous"></script>
     <!--  -->
 </body>
 </html>
