--- a/templates/grupo_trabajo.html
+++ b/templates/grupo_trabajo.html
@@ -152,6 +152,7 @@
                       <p>- Natxo Irigoien Iriarte</p>
                       <p>- Ferdaous Zouaghi</p>
                       <p>- Francisco López Arceiz</p>
+                      <p>- Roldán Jimeno Aranguren</p>
                       <p>- Aitor Ezker Galech</p>
                     </div>
                   </div>
